fix(css): improve color contrast

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -274,7 +274,7 @@ h2 {
 }
 
 .last-changed {
-  color: #a7a7a7;
+  color: #595959;
   font-style: italic;
   margin: 0px;
   margin-left: 5px;
